--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,31 @@
 .App {
     margin: 25px 25px 25px 25px;
-    /*border: 1px solid black;*/
+    background-color: #CDB5CD;
 }
 
 .Section {
-    width: 100%;
+    color: white;
 }
 
 .Left-Half {
-    background-color: #ff9e2c;
+    color: white;
     float: left;
     width: 50%;
 }
 
 .Right-Half {
-    background-color: #b6701e;
+    color: white;
     float: left;
     width: 50%;
 }
 
 body { 
-    color: #fff;
+    /*background-color: #5E2D79;*/
+    background-color: #8B7B8B;
+    color: white;
     font-family: sans-serif;
     font-size: 1.25rem;
     line-height: 150%;
     text-align: center;
-    text-shadow: 0 2px 2px #b6701e;
+    /*text-shadow: 0 2px 2px #b6701e;*/
 }
