--- a/src/header.css
+++ b/src/header.css
@@ -1,17 +1,33 @@
 .Header {
-    border: 1px solid black;
-    margin: 0 auto;
-    background-color: white;
+    background-color: #8B7B8B;
+    color: white;
     width: 100%;
-    text-align: center;
-    /*width: 500px;*/
+    margin: 0 0 1.4rem 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.Header_Sidebar {
+    flex: 1 1 auto;
+}
+
+.Header_Main {
+    flex: 1 1 auto;
+    width: 35%;
+}
+
+.Header_Link {
+    color: white;
 }
 
 .HeadingText {
-    color: black;
+    color: white;
+    text-align: left;
+    margin: 2px 2px 2px 2px;
 }
 
 h1 {
     font-size: 1.75rem;
     margin: 0 0 0.75rem 0;
+    color: white;
 }
