--- a/src/main.css
+++ b/src/main.css
@@ -1,16 +1,62 @@
-/*.Main {
-    border: 1px solid black;
-    margin: 0 auto;
-    background-color: white;
-    position: relative;
-    top: 25%;
-    right: 50%;
-    padding: 1rem;
-    text-align: center;
-}*/
+/*border: 1px solid black;*/
 
 .Main {
-    background-color: #b6701e;
+    background-color: #8B7B8B;
+    color: white;
     float: left;
-    width: 50%;    
+    text-align: left;
+    width: 69%;
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
 }
+
+.Note {
+    background-color: #2E0854; 
+    color: white;
+    margin: 0px 15px 15px 15px;
+    padding: 0px 6px 6px 6px;
+}
+
+.Note_Section1 {
+
+}
+
+.Note_Section2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.Note_Section2_Date {
+    color: white;
+    font-size: 12px;
+    margin: 0px;
+
+}
+
+.Note_Section2_Button {
+    
+}
+
+.Add_Note_Button_Section {
+    text-align: center;
+}
+
+.Add_Note_Button {
+
+}
+
+.Note_Name {
+    color: white;
+    font-size: 18px;
+    margin: 2px 2px 16px 2px;
+}
+
+.Note_Link {
+    text-decoration: none; 
+    color: white;
+}
+
+
