--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,12 @@
 /*border: 1px solid black;*/
 
 .Main {
-    background-color: #8B7B8B;
+    /*background-color: #8B7B8B;*/
+    background-color: linear-gradient(
+        to right,
+        #8B7B8B 0%,
+        #8B7B8B 100%,
+    );
     color: white;
     float: left;
     text-align: left;
