--- a/src/mainDetail.css
+++ b/src/mainDetail.css
@@ -1,3 +1,14 @@
 .MainDetail {
-    
+    background-color: #2E0854; 
+    color: white;
+    float: left;
+    width: 60%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column; 
+    align-content: space-around;
+    border: 1px solid black;
+    height: 500px;
+    padding: 5px;
+    margin: 6px;
 }
