--- a/src/sidebarDetail.css
+++ b/src/sidebarDetail.css
@@ -1,3 +1,25 @@
+/*.SidebarDetail {
+    border: 1px solid black;
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+    padding: 1rem;
+    text-align: center;
+}*/
+
 .SidebarDetail {
-    
+    background-color: #2E0854; 
+    color: white;
+    float: left;
+    width: 10%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column; 
+    align-content: space-around;
+    border: 1px solid black;
+    padding: 15px;
+    margin: 6px;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    text-align: center;
 }
