--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
     margin: 25px 25px 25px 25px;
-    background-color: #CDB5CD;
+    /*background-color: #CDB5CD;*/
+    background-color:  #8B7B8B;
 }
 
 .Section {
