--- a/src/mainDetail.css
+++ b/src/mainDetail.css
@@ -1,14 +1,75 @@
+/* border: 1px solid black; */
 .MainDetail {
-    background-color: #2E0854; 
     color: white;
     float: left;
-    width: 60%;
+    width: 80%;
     margin-top: 15px;
     display: flex;
     flex-direction: column; 
     align-content: space-around;
-    border: 1px solid black;
     height: 500px;
-    padding: 5px;
+    padding: 0px 0px 0px 0px;
+    /*padding: 2px;*/
     margin: 6px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    text-align: left;
 }
+
+.MainDetail_Header {
+    background-color:#696969;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.Header_Section1 {
+}
+
+.Header_Section2 {
+    height: 50px;
+    width: 65px;
+}
+
+.NoteTitle {
+    padding: 6px 0px 0px 6px;   
+    margin: 6px 6px 2px 6px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.Date {
+    padding: 0px 0px 6px 6px;
+    margin: 6px 6px 12px 6px;
+    font-size: 14px;
+    text-align: left;
+}
+
+.DeleteButton {
+    background-color: lightgray;
+    transform: rotate(-90deg);
+    width: 98px;
+    top: 150px;
+    margin: 30px 0px 0px 0px;
+    padding: 4px;
+    font-size: 20px;
+    text-decoration: inherit;
+}
+
+.NoteBox {
+    width: 80%;
+    height: 500px;
+    color: black;
+    background-color: white;
+    font-size: 1rem;
+    text-indent: 12px;
+}
+
+.NoteText {
+    margin: 10px;
+}
+
