--- a/src/header.css
+++ b/src/header.css
@@ -1,19 +1,31 @@
-.Header {
+.HeaderBox {
+    /*border: 1px solid black;*/
+    background-color: #8B7B8B;
+    color: white;
+    /*width: 100%;*/
+    margin: 0px 0 1.4rem 20%;
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 auto;
+}
+
+.HeaderBox_WithNote {
     background-color: #8B7B8B;
     color: white;
     width: 100%;
-    margin: 0 0 1.4rem 0;
+    margin: 2rem 0 1rem 0;
     display: flex;
     flex-direction: row;
 }
 
 .Header_Sidebar {
-    flex: 1 1 auto;
+    /*flex: 1 1 auto;*/
+    width: 18%;
 }
 
 .Header_Main {
-    flex: 1 1 auto;
-    width: 35%;
+    /*flex: 1 1 auto;*/
+    /*width: 75%;*/
 }
 
 .Header_Link {
@@ -27,7 +39,28 @@
 }
 
 h1 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     margin: 0 0 0.75rem 0;
     color: white;
+}
+
+.Section_BackButton {
+    background-color: #8B7B8B;
+    color: black;
+    height: 40px;
+    width: 75px;
+    padding: 8px 0px 0px 20px;
+    margin: 0px 0px 0px 30px;
+}
+
+.BackButton {
+    border: 1px solid lightgray;
+    background-color: lightgray;   
+    padding: 12px;
+    text-align: center;
+    text-decoration: inherit;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    font-size: 14px;
 }
