--- a/src/sidebarDetail.css
+++ b/src/sidebarDetail.css
@@ -1,43 +1,27 @@
 /* border: 1px solid black; */
 .SidebarDetail {
-    padding: 0px;
-    margin: 0px;
     background-color: #8B7B8B;
+    padding: auto;
+    margin: auto;
 }
 
 .FolderName {
-    background-color: #2E0854; 
+    background-color: #8B7B8B;
     color: white;
     float: left;
     width: 10%;
-    margin-top: 15px;
+    margin: 0px 15px 15px 15px;
     display: flex;
     flex-direction: column; 
     align-content: space-around;
-    border: 1px solid black;
     padding: 15px;
     margin: 6px;
     writing-mode: vertical-rl;
     text-orientation: upright;
     text-align: center;
     flex-wrap: nowrap;
+    font-size: 45px;
 }
 
-.Section_BackButton {
-    background-color: #8B7B8B;
-    color: black;
-    height: 40px;
-    width: 75px;
-    padding: 0px;
-    margin: 0px;
-}
 
-.BackButton {
-    background-color: lightgray;   
-    height: 40px;
-    width: 75px;
-    padding: 0px;
-    margin: 0px;
-    text-decoration: inherit;
-}
 
