--- a/src/header.css
+++ b/src/header.css
@@ -2,7 +2,6 @@
     /*border: 1px solid black;*/
     background-color: #8B7B8B;
     color: white;
-    /*width: 100%;*/
     margin: 0px 0 1.4rem 20%;
     display: flex;
     flex-direction: row;
@@ -23,9 +22,20 @@
     width: 18%;
 }
 
+.Header_Sidebar_WithNote {
+    /*flex: 1 1 auto;*/
+    width: 18%;
+    padding: 0px 0px;
+}
+
 .Header_Main {
     /*flex: 1 1 auto;*/
     /*width: 75%;*/
+}
+
+.Header_Main_WithNote {
+    /*flex: 1 1 auto;*/
+    margin: 0px 20px;
 }
 
 .Header_Link {
@@ -48,9 +58,9 @@ h1 {
     background-color: #8B7B8B;
     color: black;
     height: 40px;
-    width: 75px;
-    padding: 8px 0px 0px 20px;
-    margin: 0px 0px 0px 30px;
+    /*width: 75px;*/
+    padding: 10px 10px 0px 20px;
+    margin: 0px 10px 0px 30px;
 }
 
 .BackButton {
