--- a/src/mainDetail.css
+++ b/src/mainDetail.css
@@ -1,4 +1,3 @@
-/* border: 1px solid black; */
 .MainDetail {
     color: white;
     float: left;
@@ -50,13 +49,13 @@
 
 .DeleteButton {
     background-color: lightgray;
-    border: 1px solid lightgray;
+    border: 1px solid #696969;
     transform: rotate(-90deg);
-    width: 98px;
+    width: 90px;
     top: 150px;
-    margin: 31px 0px 0px 0px;
+    margin: 33px 0px 0px 0px;
     padding: 4px;
-    font-size: 20px;
+    font-size: 17px;
     text-decoration: inherit;
 }
 
