--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     align-content: space-around;
+    justify-content: center;
+    align-items: center;
 }
 
 .Note {
@@ -14,6 +16,8 @@
     color: white;
     margin: 0px 15px 15px 15px;
     padding: 0px 6px 6px 6px;
+    width: 380px;
+    position: relative;
 }
 
 .Note_Section1 {
@@ -51,6 +55,7 @@
     text-decoration: inherit;
     border-radius: 50%;
     font-size: 14px;
+    margin: 20px auto;
 }
 
 .Note_Name {
