--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@ body {
 .App {
     margin: 25px 25px 25px 25px;
     background-color:  #8B7B8B;
-    display: grid | inline-grid;
-    grid-template-columns: 20px 200px;
+    width: 75%;
+    /*display: grid | inline-grid;
+    grid-template-columns: 20px 200px;*/
 
     /*min-height: 100vh;
     grid-template-rows: 120px 1fr;
@@ -18,13 +19,20 @@ body {
 
 .Section_Sidebar {
     color: white;
+    display: inline;
+    width: 20%;
+    height: 100%;
+
 }
 
 .Section_Main {
     color: white;
+    display: inline;
+    width: 80%;
+    height: 100%;
 }
 
-.Left-Half {
+/*.Left-Half {
     color: white;
     float: left;
     width: 50%;
@@ -34,7 +42,7 @@ body {
     color: white;
     float: left;
     width: 50%;
-}
+}*/
 
 body { 
     /*background-color: #5E2D79;*/
