--- a/src/addNote.css
+++ b/src/addNote.css
@@ -1,12 +1,29 @@
 .AddNote {
     /*border: 1px solid black;*/
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .NameInput {
     
 }
 
+.ContentInput {
+    
+}
+
+.folderInput {
+    
+}
+
+.Label {
+
+}
+
 .SubmitButton {
     margin: 20px;
+    width: 15%;
+    align-items: center;
 }
