--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,12 @@
 body {
-    /*background-image: linear-gradient( #8B7B8B, #b9afb9);*/
 }
 
 .App {
     margin: 25px 25px 25px 25px;
     background-color:  #8B7B8B;
-    /*width: 75%;*/
-    /*display: grid | inline-grid;
-    grid-template-columns: 20px 200px;*/
-
-    /*min-height: 100vh;
-    grid-template-rows: 120px 1fr;
-    grid-template-columns: 1fr 2.3fr;
-    grid-template-areas:
-        "sidebar header"
-        "sidebar main";*/
 }
 
-/* How prevent overlapping sections? */
+/* How prevent overlapping sections using display block: */
 /* 1. Use width percentages */
 /* 2. Use max-width */
 /* 3. Use display: block */
@@ -28,49 +17,67 @@ body {
     max-width: 1200px;
 }
 
+.Section_Header {
+
+}
+
+
+.Section_SidebarMainEmpty {
+    /*display: flex;*/
+}
+
 .Section_Sidebar {
     color: white;
-    display: block;
-    /*float: left;
-    clear: both;*/
-    /*display: inline;
-    width: 30%;
-    max-width: 100px;
-    height: 100%;*/
+    padding: 0px 10px 0px 0px;
+    margin: 0px;
 }
 
 .Section_Main {
     color: white;
-    display: block;
-    /*float: left;
-    clear: both;*/
-    /*width: 70%;
-    max-width: 600px;
     float: left;
-    margin: 0px 0px 0px 100px;
-    display: inline;
-    height: 100%;*/
+    padding: 0px 0px 0px 51px;
+    margin: 0px;
 }
 
-/*.Left-Half {
-    color: white;
-    float: left;
-    width: 50%;
+.Section_Empty {
 }
-
-.Right-Half {
-    color: white;
-    float: left;
-    width: 50%;
-}*/
 
 body { 
-    /*background-color: #5E2D79;*/
     background-color: #8B7B8B;
     color: white;
     font-family: sans-serif;
     font-size: 1.25rem;
     line-height: 150%;
     text-align: center;
-    /*text-shadow: 0 2px 2px #b6701e;*/
+}
+
+
+@media only screen and (max-width: 1050px) {
+    body { 
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .Section_Sidebar {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .Section_Main {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    body { 
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .Section_Sidebar {
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .Section_Main {
+        font-size: .8rem;
+        line-height: 80%;
+    }
 }
