--- a/src/main.css
+++ b/src/main.css
@@ -20,10 +20,6 @@
     position: relative;
 }
 
-.Note_Section1 {
-
-}
-
 .Note_Section2 {
     display: flex;
     flex-direction: row;
@@ -51,10 +47,10 @@
     color: #2E0854;
     border: 1px solid lightgray;
     background-color: lightgray;   
-    padding: 12px;
+    padding: 5px;
     text-align: center;
     text-decoration: inherit;
-    border-radius: 50%;
+    border-radius: 20%;
     font-size: 14px;
     /*margin: 20px auto;*/
 }
@@ -70,4 +66,54 @@
     color: white;
 }
 
+
+@media only screen and (max-width: 1050px) {
+    body { 
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .Main {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .Note {
+        font-size: 1rem;
+        line-height: 80%;
+        width: 250px;
+        margin: 0px 0px 10px 0px;
+    }
+    .AddNote_Button {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .Note_Name {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    body { 
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .Main {
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .Note {
+        font-size: .8rem;
+        line-height: 80%;
+        width: 250px;
+        margin: 0px 0px 10px 0px;
+    }
+    .AddNote_Button {
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .Note_Name {
+        font-size: .8rem;
+        line-height: 80%;
+    }
+}
 
