--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -65,7 +65,7 @@
 }
 
 
-@media only screen and (max-width: 1050px) {
+/*@media only screen and (max-width: 1050px) {
     body { 
         font-size: 1rem;
         line-height: 100%;
@@ -113,4 +113,4 @@
         font-size: .8rem;
         line-height: 80%;
     }
-}
+}*/
