--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 }
 
 
-@media only screen and (max-width: 1050px) {
+/*@media only screen and (max-width: 1050px) {
     body { 
         font-size: 1rem;
         line-height: 100%;
@@ -80,4 +80,4 @@ body {
         font-size: .8rem;
         line-height: 80%;
     }
-}
+}*/
