--- a/src/addFolder.css
+++ b/src/addFolder.css
@@ -16,11 +16,10 @@
     font-size: 14px;
     align-items: center;
     border-radius: 20%;
-    padding: 5px;
 }
 
 
-@media only screen and (max-width: 1050px) {
+/*@media only screen and (max-width: 1050px) {
     body { 
         font-size: 1rem;
         line-height: 100%;
@@ -56,4 +55,4 @@
         font-size: .8rem;
         line-height: 80%;
     }
-}
+}*/
