--- a/src/addNote.css
+++ b/src/addNote.css
@@ -28,7 +28,7 @@
 }
 
 
-@media only screen and (max-width: 1050px) {
+/*@media only screen and (max-width: 1050px) {
     body { 
         font-size: 1rem;
         line-height: 100%;
@@ -72,4 +72,4 @@
         font-size: .8rem;
         line-height: 80%;
     }
-}
+}*/
