--- a/src/sidebarDetail.css
+++ b/src/sidebarDetail.css
@@ -1,7 +1,6 @@
 .SidebarDetail {
     background-color: #8B7B8B;
     padding: auto;
-    
 }
 
 .FolderName {
@@ -9,11 +8,9 @@
     color: white;
     float: left;
     width: 11%;
-    /*display: flex;
-    flex-direction: column; */
     align-content: space-around;
-    padding: 18px;
-    margin: 6px;
+    padding: 10px 0px 0px 0px;
+    margin: 2px;
     writing-mode: vertical-rl;
     text-orientation: upright;
     text-align: center;
@@ -22,3 +19,24 @@
 }
 
 
+/*@media only screen and (max-width: 1050px) {
+    body { 
+        font-size: 1rem;
+        line-height: 100%;
+    }
+    .FolderName {
+        font-size: 1rem;
+        line-height: 100%;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    body { 
+        font-size: .8rem;
+        line-height: 80%;
+    }
+    .FolderName {
+        font-size: .8rem;
+        line-height: 80%;
+    }
+}*/
