--- a/src/BACKUP/mainDetail.css
+++ b/src/BACKUP/mainDetail.css
@@ -61,9 +61,9 @@
 }
 
 .NoteBox {
-    /*width: 80%;*/
-    /*height: 500px;
-    width: 400px;*/
+    width: 80%;
+    height: 500px;
+    width: 400px;
     color: black;
     background-color: white;
     font-size: 1rem;
@@ -74,27 +74,3 @@
     margin: 10px;
 }
 
-
-@media only screen and (max-width: 320px) {
-    .NoteBox {
-        width: 500%;
-    }
-
-    .MainDetail {
-        margin-top: 1rem;
-        width: 12vw;
-    }
-
-    .MainDetail_Header {
-        width: 500%;
-    }
-
-    .DeleteButton {
-        width: 80px;
-        top: 150px;
-        margin: 28px 0px 0px 5px;
-        padding: 4px;
-        font-size: 17px;
-        text-decoration: inherit;
-    }
-}
