--- a/src/BACKUP/sidebar.css
+++ b/src/BACKUP/sidebar.css
@@ -2,7 +2,7 @@
     background-color:  #8B7B8B;
     color: white;
     float: left;
-    width: 15vw;
+    width: 30%;
     display: flex;
     flex-direction: column; 
     align-content: space-around;
@@ -12,18 +12,21 @@
 
 .Folder {
     background-color: #573976;
-    margin: 0rem 1rem 1rem .5rem;
-    padding: 1rem 2.5rem 1rem 1rem;
-    width: 7rem;
+    /*padding: 15px 15px 15px 15px;
+    margin: 0px 6px 12px 6px;*/
     text-align: center;
     display: block;
+    margin: 0rem 1rem 1rem 1rem;
+    padding: 0.5rem 1rem 1rem 1rem;
+    width: 8rem;
+    /*width: 180px;*/
 }
 
 .SelectedFolder {
     background-color: #2E0854; 
-    margin: 0rem 1rem 1rem .5rem;
-    padding: 1rem 2.5rem 1rem 1rem;
-    width: 7rem;
+    padding: 15px 15px 15px 15px;
+    margin: 0px 6px 12px 6px;
+    width: 180px;
 }
 
 .Folder_Link {
@@ -33,9 +36,19 @@
 
 .AddFolder_Section {
     background-color: #8B7B8B;
-    width: 10rem;
-    margin: 1rem 0px 0px 0px;
+    margin: 20px auto;
 }
+
+/*.AddFolder_Button {
+    border: 1px solid lightgray;
+    background-color: lightgray;   
+    color: #2E0854;
+    padding: 12px;
+    text-align: center;
+    text-decoration: inherit;
+    border-radius: 50%;
+    font-size: 14px;
+}*/
 
 .AddFolder_Button {
     border: 1px solid lightgray;
@@ -55,42 +68,32 @@
 }
 
 
-
-
-
-
-
-@media only screen and (max-width: 320px) {
+/*@media only screen and (max-width: 1050px) {
+    body { 
+        font-size: 1rem;
+        line-height: 100%;
+    }
     .Sidebar {
-        width: 6vw;
+        font-size: 1rem;
+        line-height: 100%;
     }
-    
     .Folder {
-        margin: 0rem 1.4rem 1rem 3rem;
-        /*padding: 0.7rem;*/
-        width: 5.2rem;
-        font-size: .9rem;
-        text-align: left;
+        font-size: 1rem;
+        line-height: 100%;
+        width: 40%;
     }
-    
     .SelectedFolder {
-        margin: 0rem 1.4rem 1rem 3rem;
-        padding: 0.7rem;
-        width: 5.2rem;
+        font-size: 1rem;
+        line-height: 100%;
+        width: 40%;
     }
-    
-    .AddFolder_Section {
-        width: 5.7rem;
-        margin: 1rem 1rem 1rem 2.5rem;
-    }
-    
     .AddFolder_Button {
-        padding: 3px;
-        font-size: .9rem;
+        font-size: 1rem;
+        line-height: 100%;
     }
 }
 
-/*@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 950px) {
     body { 
         font-size: .8rem;
         line-height: 80%;
