--- a/src/addFolder.css
+++ b/src/addFolder.css
@@ -1,6 +1,8 @@
+/* These settings are for mobile devices greater than 320 width */
 .AddFolder {
     /*border: 1px solid black;*/
-    margin: 20px;
+    /*margin: 20px;*/
+    margin: 0rem 5rem 0rem 0rem;
 }
 
 .NameInput {
@@ -22,10 +24,10 @@
     /*border: 1px solid black;*/
     background-color: #8B7B8B;
     color: white;
-    /*margin: 0px 0 1.4rem 20%;*/
-    display: flex;
+    margin: 0rem;
+    /*display: flex;
     flex-direction: row;
-    flex: 1 1 auto;
+    flex: 1 1 auto;*/
 }
 
 /*.HeaderBox_WithNote {
@@ -67,26 +69,28 @@
 .AddFolder_Section_BackButton {
     background-color: #8B7B8B;
     color: black;
-    height: 40px;
-    /*width: 75px;*/
-    padding: 10px 10px 0px 20px;
-    margin: 0px 10px 0px 30px;
+    /*padding: 1rem 1rem 0rem 2rem; 
+    margin: 0px 10px 0px 30px;*/
+    height: 15vh;
+    padding: 2rem 0rem 0rem 2rem; 
+    margin: 4rem 0rem 0rem 0rem;
 }
 
 .AddFolder_BackButton {
     border: 1px solid lightgray;
     background-color: lightgray;   
-    padding: 12px;
+    padding: 1rem;
+    margin: 0rem 0rem 0rem 2rem;
     text-align: center;
     text-decoration: inherit;
     border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    font-size: 14px;
+    height: 1rem;
+    width: 1rem;
+    font-size: 1.2rem;
 }
 
 .AddFolder_HeadingText {
-    margin: 2px 2px 2px 2px;
+    margin: 0rem;
 }
 
 .AddFolder_Header_Link {
@@ -94,11 +98,13 @@
 }
 
 
+/* These settings are for the smallest screens */
 @media only screen and (max-width: 320px) {
     .AddFolder_Section_BackButton {
+        /*border: 1px solid black;*/
         height: 15vh;
-        padding: 10px 10px 0px 20px;
-        margin: 1rem;
+        padding: 0rem 0rem 0rem 0rem; 
+        margin: 4rem 0rem 0rem 0rem;
     }
 
     .AddFolder_Title {
@@ -110,7 +116,6 @@
     .AddFolder_HeaderBox {
         margin: 0rem;
         display: block;
-        /*border: 1px solid black;*/
     }
 
     .AddFolder {
@@ -161,7 +166,8 @@
 
 
 
-/*@media only screen and (max-width: 950px) {
+/* These settings are for larger screens */
+/*@media only screen and (min-width: 750px) {
     body { 
         font-size: .8rem;
         line-height: 80%;
