--- a/src/addNote.css
+++ b/src/addNote.css
@@ -1,3 +1,4 @@
+/* These settings are for mobile devices greater than 320 width */
 .AddNote {
     margin: 20px;
     display: flex;
@@ -37,12 +38,13 @@
 }*/
 
 .AddNote_HeaderBox {
+    /*border: 1px solid black;*/
     background-color: #8B7B8B;
     color: white;
     /*width: 100%;*/
-    margin: 2rem 0 1rem 0;
-    display: flex;
-    flex-direction: row;
+    margin: 2rem 0 4rem 0rems;
+    /*display: flex;
+    flex-direction: row;*/
 }
 
 .AddNote_Header_Sidebar {
@@ -51,9 +53,7 @@
 }
 
 .AddNote_Header_Main {
-    /*margin: 0px 0px 0px 100px;*/
-    margin: 0rem 0rem 0rem 2rem;
-    /*border: 1px solid black;*/
+    margin: 2.5rem 0rem 2.5rem 2.5rem;
 }
 
 .AddNote_Header_Link {
@@ -67,8 +67,10 @@
 }
 
 .NoteTitle {
-    font-size: 2rem;
+    line-height: 100%;
+    font-size: 1.5rem;
     margin: 0 0 0.75rem 0;
+    padding: 1rem;
     color: white;
 }
 
@@ -76,7 +78,6 @@
     background-color: #8B7B8B;
     color: black;
     height: 40px;
-    /*width: 75px;*/
     padding: 10px 10px 0px 20px;
     margin: 0px 10px 0px 30px;
 }
@@ -90,7 +91,7 @@
     border-radius: 50%;
     height: 20px;
     width: 20px;
-    font-size: 14px;
+    font-size: 1.2rem;
 }
 
 .AddNote_HeadingText {
@@ -100,7 +101,7 @@
 
 
 
-
+/* These settings are for the smallest screens */
 @media only screen and (max-width: 320px) {
     .AddNote_Label {
         font-size: 1rem;
@@ -114,8 +115,8 @@
 
     .AddNote_Section_BackButton {
         height: 15vh;
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 0rem;
+        padding: 1rem 0rem 0rem 0rem; 
+        margin: 4rem 0rem 0rem 1rem;
     }
 
     .AddNote_Title {
@@ -166,7 +167,8 @@
 }
 
 
-/*@media only screen and (max-width: 950px) {
+/* These settings are for larger screens */
+/*@media only screen and (min-width: 750px) {
     body { 
         font-size: .8rem;
         line-height: 80%;
