--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,4 @@
+/* These settings are for mobile devices greater than 320 width */
 .Main {
     background-color: #8B7B8B;
     color: white;
@@ -14,6 +15,8 @@
 .Note {
     background-color:#696969;
     color: white;
+    /*margin: 0rem 2rem 1rem 4rem;
+    padding: 0.5rem 1rem 3rem 0.5rem;*/
     margin: 0rem 2rem 1rem 4rem;
     padding: 0.5rem 1rem 3rem 0.5rem;
     width: 50vw;
@@ -72,7 +75,7 @@
 
 
 
-
+/* These settings are for the smallest screens */
 @media only screen and (max-width: 320px) {
     .Main {
         width: 8vw;
@@ -80,8 +83,8 @@
     
     .Note {
         margin: 0rem 0.5rem 1rem 8rem;
-        padding: 0.5rem 0.5rem 0.5rem 0.4rem;
-        width: 50vw;
+        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+        width: 45vw;
         height: 5.2rem;
         font-size: .6rem;
     }
@@ -92,12 +95,12 @@
     }
 
     .AddNote_Button_Section {
-        margin: 1rem 0rem 0rem 6rem;
+        margin: 1rem 0rem 0rem 7rem;
         padding: 0.5rem 1rem 0.5rem 1rem;
     }
     
     .AddNote_Button {
-        padding: 5px;
+        padding: .4rem;
         text-align: center;
         margin: 20px auto;
         white-space: nowrap;
@@ -111,7 +114,8 @@
 }
 
 
-/*@media only screen and (max-width: 950px) {
+/* These settings are for larger screens */
+/*@media only screen and (min-width: 750px) {
     body { 
         font-size: .8rem;
         line-height: 80%;
